Course list : adjusting width to avoid white spacing

--- a/src/main/webapp/course-list/course-list.style.client.css
+++ b/src/main/webapp/course-list/course-list.style.client.css
@@ -17,7 +17,7 @@
 }
 
 .ss-title-col {
-    width: 50%;
+    width: 55%;
 }
 
 .ss-owned-by-col {
